# Filter

./: .gitignore  .gitmodules  BuildLinux.sh  BuildWindows.bat  CMakeLists.txt
Devel/GCC/: CompileGCC_LinToLin.sh  ConfigFile.ini  main.cpp
Source/: CMakeLists.txt  Filter.cpp  Filter.h  Headers.h  PreComp.cpp  devel.cpp
